syntax = "proto3";

package user;
option go_package = ".;v1";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";


// The User service definition.
service UserService {

  rpc UpdateUser(User) returns (User) {
    option (google.api.http) = {
      post: "/user"
      body: "*"
    };

  }
  rpc GetUser(GetUserRequest) returns (User) {
    option (google.api.http) = {
      get: "/user"
    };
  }

  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/user"
    };
  }
}


// Get user by ID

message GetUserRequest {
  string user_id = 1;
}

// Update user's information

message User {
  string last_name = 1;
  string first_name = 2;
  string phone = 3;
  string address = 4;
  string email = 5;
  string user_id = 6;
}

// Delete users

message DeleteUserRequest {
  string user_id = 1;
}

